<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/account_login_id"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightGray"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/account_info_header" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/account_info_text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightGray"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/account_management" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/account_gplus_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:text="@string/create_new_account"
        android:layout_margin="2dp"
        android:id="@+id/account_create_fresh"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightGray"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/account_login_text" />

    <EditText
        android:id="@+id/account_username"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/account_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/password" />

    <Button
        android:layout_width="match_parent"
        android:text="@string/account_login"
        android:layout_margin="2dp"
        android:id="@+id/account_login"
        android:layout_height="wrap_content" />

</LinearLayout>