<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/account_loggedin_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightGray"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/account_info_header" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/account_info_text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightGray"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/account_management" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/loggin_in_text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/account_loggedin_username"
        android:textSize="20dp" />

    <Button
        android:layout_width="match_parent"
        android:text="@string/account_logout"
        android:layout_margin="2dp"
        android:id="@+id/account_logout"
        android:layout_height="wrap_content" />

</LinearLayout>