<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="ifRoom"
        android:title="@string/searchForLocation"/>
    <item
        android:id="@+id/action_goTo"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/goToCurrentLocation"
        android:icon="@android:drawable/ic_menu_mylocation" />

    <item
        android:id="@+id/action_show_right_drawer"
        android:orderInCategory="200"
        android:icon="@drawable/actionlogo"
        android:showAsAction="ifRoom"
        android:title="@string/show_right_drawer"/>

</menu>