<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/tracking_trip_name"
        android:layout_width="match_parent"
        android:hint="@string/tracking_trip_name"
        android:inputType="text"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/tracking_trip_from"
        android:layout_width="match_parent"
        android:inputType="text"
        android:hint="@string/tracking_trip_from"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/tracking_trip_to"
        android:layout_width="match_parent"
        android:inputType="text"
        android:hint="@string/tracking_trip_to"
        android:layout_height="wrap_content" />

</LinearLayout>