<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightGray"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/account_info_header"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/account_info_text"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightGray"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/account_management"
        />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/account_gplus_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.facebook.widget.LoginButton
        android:id="@+id/account_facebook_auth"
        android:layout_width="match_parent"
        android:layout_margin="4dp"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:text="@string/create_new_account"
        android:layout_margin="2dp"
        android:id="@+id/account_create_fresh"
        android:layout_height="wrap_content" />


</LinearLayout>